--- a/06_Transformer/Transformer.ipynb
+++ b/06_Transformer/Transformer.ipynb
@@ -69,6 +69,9 @@
     "        #-----------------------------------------------------------------        \n",
     "        residual, batch_size = Q, Q.size(0) # 保留残差连接\n",
     "        # 将输入进行线性变换和重塑，以便后续处理\n",
+    "        # W_Q/KV:       [batch_size,    len_q/k/v,  d_k * n_heads]\n",
+    "        # view:         [batch_size,    len_q/k/v,  n_heads,    d_k]\n",
+    "        # transpose:    [batch_size,    n_heads,    len_q/k/v,  d_k]\n",
     "        q_s = self.W_Q(Q).view(batch_size, -1, n_heads, d_k).transpose(1,2)        \n",
     "        k_s = self.W_K(K).view(batch_size, -1, n_heads, d_k).transpose(1,2)\n",
     "        v_s = self.W_V(V).view(batch_size, -1, n_heads, d_v).transpose(1,2)\n",
@@ -76,6 +79,7 @@
     "        # q_s k_s v_s: [batch_size, n_heads, len_q/k/v, d_q=k/v]\n",
     "        #----------------------------------------------------------------- \n",
     "        # 将注意力掩码复制到多头 attn_mask: [batch_size, n_heads, len_q, len_k]\n",
+    "        # 遮住对齐位，以免影响注意力计算\n",
     "        attn_mask = attn_mask.unsqueeze(1).repeat(1, n_heads, 1, 1)\n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # attn_mask [batch_size, n_heads, len_q, len_k]\n",
@@ -181,6 +185,7 @@
    "outputs": [],
    "source": [
     "# 定义填充注意力掩码函数\n",
+    "# 以便在注意力计算时屏蔽掉对齐序列长度的填充位的影响，它们没有实际含义\n",
     "def get_attn_pad_mask(seq_q, seq_k):\n",
     "    #------------------------- 维度信息 --------------------------------\n",
     "    # seq_q 的维度是 [batch_size, len_q]\n",
@@ -235,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "b4ea3c25",
    "metadata": {},
    "outputs": [],
@@ -252,6 +257,8 @@
     "    def forward(self, enc_inputs):  \n",
     "        #------------------------- 维度信息 --------------------------------\n",
     "        # enc_inputs 的维度是 [batch_size, source_len]\n",
+    "        # batch_size: 批次数量\n",
+    "        # source_len: 词序列(token)长度\n",
     "        #-----------------------------------------------------------------\n",
     "        # 创建一个从 1 到 source_len 的位置索引序列\n",
     "        pos_indices = torch.arange(1, enc_inputs.size(1) + 1).unsqueeze(0).to(enc_inputs)\n",
@@ -259,6 +266,11 @@
     "        # pos_indices 的维度是 [1, source_len]\n",
     "        #-----------------------------------------------------------------             \n",
     "        # 对输入进行词嵌入和位置嵌入相加 [batch_size, source_len，embedding_dim]\n",
+    "        # self.src_emb(enc_inputs)\n",
+    "        #   把词序列映射到词嵌入张量:[batch_size, source_len，embedding_dim]\n",
+    "        # self.pos_emb(pos_indices)\n",
+    "        #   把位置序列映射到位置嵌入张量:[1, source_len，embedding_dim]\n",
+    "        # + 通过广播机制将位置嵌入张量复制到每个批次，相加后的到词嵌入位置张量: [batch_size, source_len，embedding_dim]\n",
     "        enc_outputs = self.src_emb(enc_inputs) + self.pos_emb(pos_indices)\n",
     "        #------------------------- 维度信息 --------------------------------\n",
     "        # enc_outputs 的维度是 [batch_size, seq_len, embedding_dim]\n",
