--- a/06_Transformer/Transformer.ipynb
+++ b/06_Transformer/Transformer.ipynb
@@ -32,11 +32,13 @@
     "        #-----------------------------------------------------------------    \n",
     "        scores.masked_fill_(attn_mask, -1e9) \n",
     "        # 对注意力分数进行 softmax 归一化\n",
+    "        # scroes转换成概率表示\n",
     "        weights = nn.Softmax(dim=-1)(scores) \n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # weights [batch_size, n_heads, len_q, len_k], 形状和 scores 相同\n",
     "        #-----------------------------------------------------------------         \n",
     "        # 计算上下文向量（也就是注意力的输出）, 是上下文信息的紧凑表示\n",
+    "        # V矩阵xQK的概率矩阵\n",
     "        context = torch.matmul(weights, V) \n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # context [batch_size, n_heads, len_q, dim_v]\n",
