--- a/06_Transformer/Transformer.ipynb
+++ b/06_Transformer/Transformer.ipynb
@@ -22,23 +22,27 @@
     "        # attn_mask [batch_size, n_heads, len_q, len_k]\n",
     "        #----------------------------------------------------------------\n",
     "        # 计算注意力分数（原始权重）[batch_size，n_heads，len_q，len_k]\n",
+    "        # K转置成[batch_size，n_heads，len_k，len_q]，以便完成矩阵点积: Q * K\n",
+    "        # 处于d_k的平方根，进行分数缩放，以免后续softmax导致值过大或过小\n",
     "        scores = torch.matmul(Q, K.transpose(-1, -2)) / np.sqrt(d_k) \n",
     "        #------------------------- 维度信息 --------------------------------        \n",
     "        # scores [batch_size, n_heads, len_q, len_k]\n",
+    "        # 张量表示: 每个语句，每种注意力下，词与词的相对重要性分数（Q与K的相对重要性）\n",
     "        #-----------------------------------------------------------------        \n",
     "        # 使用注意力掩码，将 attn_mask 中值为 1 的位置的权重替换为极小值\n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # attn_mask [batch_size, n_heads, len_q, len_k], 形状和 scores 相同\n",
-    "        #-----------------------------------------------------------------    \n",
+    "        #-----------------------------------------------------------------   \n",
+    "        # 用注意力掩码将分数矩阵中对齐位设置为极小负数，以便在softmax计算中将这些位的概率算成接近0 \n",
     "        scores.masked_fill_(attn_mask, -1e9) \n",
     "        # 对注意力分数进行 softmax 归一化\n",
-    "        # scroes转换成概率表示\n",
+    "        # 将scroes得分转换成概率表示\n",
     "        weights = nn.Softmax(dim=-1)(scores) \n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # weights [batch_size, n_heads, len_q, len_k], 形状和 scores 相同\n",
     "        #-----------------------------------------------------------------         \n",
     "        # 计算上下文向量（也就是注意力的输出）, 是上下文信息的紧凑表示\n",
-    "        # V矩阵xQK的概率矩阵\n",
+    "        # weights * V，以便计算出语句中每种注意力下所有词的权重\n",
     "        context = torch.matmul(weights, V) \n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # context [batch_size, n_heads, len_q, dim_v]\n",
