--- a/06_Transformer/Transformer.ipynb
+++ b/06_Transformer/Transformer.ipynb
@@ -42,7 +42,7 @@
     "        # weights [batch_size, n_heads, len_q, len_k], 形状和 scores 相同\n",
     "        #-----------------------------------------------------------------         \n",
     "        # 计算上下文向量（也就是注意力的输出）, 是上下文信息的紧凑表示\n",
-    "        # weights * V，以便计算出语句中每种注意力下所有词的权重\n",
+    "        # weights * V，以便计算出语句中每种注意力下所有词每个维度的权重\n",
     "        context = torch.matmul(weights, V) \n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # context [batch_size, n_heads, len_q, dim_v]\n",
@@ -102,6 +102,7 @@
     "        # context [batch_size, len_q, n_heads * dim_v]\n",
     "        #-----------------------------------------------------------------        \n",
     "        # 用一个线性层把连接后的多头自注意力结果转换，原始地嵌入维度\n",
+    "        # 计算: [batch_size, len_q, n_heads * dim_v] * [n_heads * dim_v, d_embedding]\n",
     "        output = self.linear(context) \n",
     "        #------------------------- 维度信息 -------------------------------- \n",
     "        # output [batch_size, len_q, embedding_dim]\n",
